wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: wallabag
        image: wallabag/wallabag:2.6.13
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "400Mi"
          requests:
            cpu: "150m"
            memory: "200Mi"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wb-images
          mountPath: /var/www/wallabag/web/assets/images
        - name: wb-data
          mountPath: /var/www/wallabag/data
      volumes:
      - name: wb-images
        persistentVolumeClaim:
          claimName: wb-images-pvc
      - name: wb-data
        persistentVolumeClaim:
          claimName: wb-data-pvc
